--- a/Image/image.html
+++ b/Image/image.html
@@ -78,6 +78,46 @@
 <div class="mySlides" style="text-align: center;"><img src="image58.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image59.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image63.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image64.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image65.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image66.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image67.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image68.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image69.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image70.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image71.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image72.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image73.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image74.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image75.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image76.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image77.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image78.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image79.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image80.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image81.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image82.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image83.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image84.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image85.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image86.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image87.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image88.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image89.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image90.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image91.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image92.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image93.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image94.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image95.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image96.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image97.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image98.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image99.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image100.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -92,7 +132,6 @@ Seven artists (bar Whilce Portacio, who opted not to become a full partner) form
 Extreme Studios's Youngblood became the first comic released under the Image banner, and became the first independent (non-Marvel/DC) title to be a number-one best-seller. Other Extreme titles published through Image included: Badrock, Bloodstrike, Brigade, Team Youngblood, Youngblood Strikefile, Glory, Prophet, Supreme, Troll and New Men.
 </p><p>
 Titles thought not to fit with the Image brand were self-published under Liefeld's separate imprint: Maximum Press. These titles included Avengelyne, Warchild, Law and Order, Black Flag, Risk, and even licensed properties such as the classic sci-fi TV show Battlestar Galactica (based on the original 1978–1979 TV series). After Liefeld's departure from Image in 1996, Maximum Press began publishing some of Liefeld's Extreme` titles (including Glory and Supreme), before Awesome Entertainment came into being.
-
 </p><p>
 Titles
 </p><p>
@@ -101,7 +140,7 @@ Titles
 <li><a href="image3.jpg">13th Artifact</a> (2016; by Amit Chauhan)
 <li><a href="image4.jpg">1963</a> (1993)
 <li><a href="image21.jpg">20xx</a> (2019)
-<li><a href="image5.jpg">21</a>
+<li><a href="image5.jpg">21</a> (1996)
 <li><a href="image6.jpg">24Seven</a> (2006)
 <li><a href="image7.jpg">3 Floyds: Alpha King</a> (2015)
 <li><a href="image8.jpg">4-Fisted Adventures of Tug and Buster</a> (1998)
@@ -283,19 +322,34 @@ Titles
 <li><a href="image172.jpg">C-23</a> (1998)
 <li><a href="image173.jpg">CHIX</a> (1998)
 <li><a href="image174.jpg">COWL</a> (2014)
-<li>Carbon Grey (2011)
-<li>Casanova (2006)
-<li>Celestine
-<li>Channel Zero
-<li>Chapel
-<li>Chassis
-<li><a href="../Chew/Chew.html">Chew</a>
-<li>Choker
-<li>Cholly and Flytrap
-<li>Circle
-<li>City of Heroes (2005)
-<li>City of Silence
-<li>Clock Maker
+<li><a href="image175.jpg">Cannibal</a> (2016)
+<li><a href="image176.jpg">Cap'n Dinosaur</a> (2014)
+<li><a href="image177.jpg">Capes</a> (2003)
+<li><a href="image178.jpg">Captain Wonder</a> (2011)
+<li><a href="image179.jpg">Carbon Grey</a> (2011)
+<li><a href="image180.jpg">Carvers</a> (1998)
+<li><a href="image181.jpg">Casanova</a> (2006)
+<li><a href="image182.jpg">Case Files: Sam &amp; Twitch</a> (2003)
+<li><a href="image183.jpg">Casual Heroes</a> (1996)
+<li><a href="image184.jpg">CBLDF Presents</a> (2010)
+<li><a href="image185.jpg">CBS Presents Action Zone</a> (1994)
+<li><a href="image186.jpg">Celestine</a> (1996)
+<li><a href="image187.jpg">Cemetery Beach</a> (2018)
+<li><a href="image188.jpg">Century West</a> (2013)
+<li><a href="image189.jpg">Change</a> (2012)
+<li><a href="image190.jpg">Channel Zero</a> (1998)
+<li><a href="image191.jpg">Chapel</a> (1995)
+<li><a href="image192.jpg">Charlatan Ball</a> (2008)
+<li><a href="image193.jpg">Chassis</a> (1999)
+<li><a href="../Chew/Chew.html">Chew</a> (2009)
+<li><a href="image194.jpg">Choker</a> (2010)
+<li><a href="../ChollyFlytrap/ChollyFlytrap.html">Cholly and Flytrap</a> (2004)
+<li><a href="image196.jpg">Chrononauts</a> (2015)
+<li><a href="image195.jpg">Circle</a> (2007)
+<li><a href="image197.jpg">City of Heroes</a> (2005)
+<li><a href="image198.jpg">City of Silence</a> (2000)
+<li><a href="image199.jpg">Classic Zorro</a> (1998)
+<li><a href="image200.jpg">Clock Maker</a> (2003)
 <li>Cloudburst (2004)
 <li>Codeflesh
 <li>Comic Book Tattoo
