--- a/Residents/Residents.html
+++ b/Residents/Residents.html
@@ -8,18 +8,8 @@
 </head>
 
 <body>
-<img src="Residents.jpg"> <br>
-Series: 44 studio albums, various compilations and singles 1969 - Present<br>
-Publisher: Ralph Records, Cryptic Corp<br>
+<img src="Residents.jpg"> 
 <p>
-The Residents are an American art collective best known for avant-garde music and multimedia works. Since their first official release, Meet the Residents (1974), the group created their own label (Ralph Records) and has released over sixty albums, numerous music videos and short films, three CD-ROM projects, and ten DVDs. 
-</p><p>
-They have undertaken seven major world tours and scored multiple films. Pioneers in exploring the potential of CD-ROM and similar technologies, the Residents have won several awards for their multimedia projects. Ralph Records, a record label focusing on avant-garde music, was started by the band.
-</p><p>
-Throughout the group's existence, the individual members have ostensibly attempted to operate under anonymity, preferring instead to have attention focused on their art output. Much outside speculation and rumor has focused on this aspect of the group. In public, the group appears silent and costumed, often wearing eyeball helmets, top hats and tails, a long-lasting costume now recognized as its signature iconography.
-</p><p>
-Its albums generally fall into two categories: deconstructions of Western popular music, and complex conceptual pieces composed around a theme, theory, or plot. The group is noted for surrealistic lyrics and sound, disregard for conventional music composition, and the over-the-top theatrical spectacle of their live performances.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -70,6 +60,16 @@ Its albums generally fall into two categories: deconstructions of Western popula
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
+</p><p>
+44 studio albums, various compilations and singles 1969 - Present by Ralph Records, Cryptic Corp
+</p><p>
+The Residents are an American art collective best known for avant-garde music and multimedia works. Since their first official release, Meet the Residents (1974), the group created their own label (Ralph Records) and has released over sixty albums, numerous music videos and short films, three CD-ROM projects, and ten DVDs. 
+</p><p>
+They have undertaken seven major world tours and scored multiple films. Pioneers in exploring the potential of CD-ROM and similar technologies, the Residents have won several awards for their multimedia projects. Ralph Records, a record label focusing on avant-garde music, was started by the band.
+</p><p>
+Throughout the group's existence, the individual members have ostensibly attempted to operate under anonymity, preferring instead to have attention focused on their art output. Much outside speculation and rumor has focused on this aspect of the group. In public, the group appears silent and costumed, often wearing eyeball helmets, top hats and tails, a long-lasting costume now recognized as its signature iconography.
+</p><p>
+Its albums generally fall into two categories: deconstructions of Western popular music, and complex conceptual pieces composed around a theme, theory, or plot. The group is noted for surrealistic lyrics and sound, disregard for conventional music composition, and the over-the-top theatrical spectacle of their live performances.
 </p><p>
 Albums: <ul>
 <li>Meet The Residents – 1974
