--- a/Image/image.html
+++ b/Image/image.html
@@ -18,12 +18,13 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="image1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="image2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="image3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="image4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="image5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="image6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image1.jpg" title="10th Muse"></div>
+<div class="mySlides" style="text-align: center;"><img src="image2.jpg" title="13 Chambers"></div>
+<div class="mySlides" style="text-align: center;"><img src="image3.jpg" title="13th Artifact"></div>
+<div class="mySlides" style="text-align: center;"><img src="image4.jpg" title="1963"></div>
+<div class="mySlides" style="text-align: center;"><img src="image21.jpg" title="20xx"></div>
+<div class="mySlides" style="text-align: center;"><img src="image5.jpg" title="21"></div>
+<div class="mySlides" style="text-align: center;"><img src="image6.jpg" title="24 Seven"></div>
 <div class="mySlides" style="text-align: center;"><img src="image7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image9.jpg"></div>
@@ -38,7 +39,6 @@
 <div class="mySlides" style="text-align: center;"><img src="image18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image20.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="image21.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image22.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image23.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image24.jpg"></div>
@@ -138,6 +138,86 @@
 <div class="mySlides" style="text-align: center;"><img src="image118.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image119.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="image120.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image121.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image122.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image123.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image124.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image125.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image126.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image127.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image128.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image129.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image130.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image131.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image132.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image133.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image134.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image135.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image136.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image137.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image138.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image139.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image140.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image141.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image142.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image143.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image144.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image145.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image146.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image147.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image148.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image149.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image150.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image151.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image152.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image153.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image154.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image155.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image156.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image157.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image158.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image159.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image160.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image161.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image162.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image163.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image164.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image165.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image166.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image167.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image168.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image169.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image170.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image171.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image172.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image173.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image174.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image175.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image176.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image177.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image178.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image179.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image180.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image181.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image182.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image183.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image184.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image185.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image186.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image187.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image188.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image189.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image190.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image191.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image192.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image193.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image194.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image195.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image196.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image197.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image198.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image199.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="image200.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -151,7 +231,7 @@ Seven artists (bar Whilce Portacio, who opted not to become a full partner) form
 </p><p>
 Extreme Studios's Youngblood became the first comic released under the Image banner, and became the first independent (non-Marvel/DC) title to be a number-one best-seller. Other Extreme titles published through Image included: Badrock, Bloodstrike, Brigade, Team Youngblood, Youngblood Strikefile, Glory, Prophet, Supreme, Troll and New Men.
 </p><p>
-Titles thought not to fit with the Image brand were self-published under Liefeld's separate imprint: Maximum Press. These titles included Avengelyne, Warchild, Law and Order, Black Flag, Risk, and even licensed properties such as the classic sci-fi TV show Battlestar Galactica (based on the original 1978–1979 TV series). After Liefeld's departure from Image in 1996, Maximum Press began publishing some of Liefeld's Extreme` titles (including Glory and Supreme), before Awesome Entertainment came into being.
+Titles thought not to fit with the Image brand were self-published under Liefeld's separate imprint: Maximum Press. These titles included Avengelyne, Warchild, Law and Order, Black Flag, Risk, and even licensed properties such as the classic sci-fi TV show Battlestar Galactica (based on the original 1978–1979 TV series). After Liefeld's departure from Image in 1996, Maximum Press began publishing some of Liefeld's Extreme titles (including Glory and Supreme), before Awesome Entertainment came into being.
 </p><p>
 Titles
 </p><p>
