--- a/Image/image.html
+++ b/Image/image.html
@@ -633,105 +633,97 @@ Titles
 <li><a href="image357.jpg">Jinx</a> (1997)
 <li><a href="../JookJoint/JookJoint.html">Jook Joint</a> (2018)
 <li><a href="image358.jpg">Journeyman</a> (1999)
-<li>J.U.D.G.E.
-<li>Jupiter's Legacy (2015)
-<li>Kabuki
-<li>Kid Supreme
-<li>Kill All Parents
-<li>Kill the Minotaur (2017)
-<li>Kill or Be Killed (2016)
-<li>Kin
-<li>Kingdom City
-<li>Kiss: Psycho Circus
-<li>Knightmare
-<li>Kore
-<li>Lady Pendragon
-<li>Lady Rawhide
-<li>Last Christmas
-<li>Last Shot
+<li><a href="image359.jpg">Jupiter's Legacy</a> (2015)
+<li><a href="image360.jpg">Kabuki</a> (1997)
+<li><a href="image361.jpg">Kid Supreme</a> (1996)
+<li><a href="image362.jpg">Kill All Parents</a> (2008)
+<li><a href="image363.jpg">Kill or Be Killed</a> (2016)
+<li><a href="image364.jpg">Kill the Minotaur</a> (2017)
+<li><a href="image365.jpg">Kin</a> (2000)
+<li><a href="image366.jpg">Kiss: Psycho Circus</a> (1998)
+<li><a href="image367.jpg">Knight Watchmen</a> (1998)
+<li><a href="image368.jpg">Knightmare</a> (1995)
+<li><a href="image369.jpg">Kore</a> (1992)
+<li><a href="image370.jpg">Lady Pendragon</a> (1998)
+<li><a href="image371.jpg">Lady Supreme</a> (1996)
+<li><a href="image372.jpg">Last Christmas</a> (2006)
+<li><a href="image373.jpg">Last Shot</a> (2001)
 <li><a href="../Lazarus/Lazarus.html">Lazarus</a> (2013)
-<li>Leave It to Chance
-<li>Legacy
-<li>Legend of Supreme
-<li>Liberty Meadows (2002)
-<li>Light (2010)
-<li>Li'l Depressed Boy
-<li>Limbo (2015)
-<li>Lions, Tigers and Bears
-<li>Liquid City
+<li><a href="image374.jpg">Leave It to Chance</a> (1996)
+<li><a href="image375.jpg">Legacy</a> (2003)
+<li><a href="image376.jpg">Legend of Supreme</a> (1994)
+<li><a href="image377.jpg">Liberty Meadows</a> (2002)
+<li><a href="image378.jpg">Light</a> (2010)
+<li><a href="image379.jpg">Lillim</a> (2009)
+<li><a href="image380.jpg">Lions, Tigers and Bears</a> (2005)
 <li><a href="../LittleBird/LittleBird.html">Little Bird</a> (2019)
-<li>Little Red Hot
-<li>Loaded Bible
+<li><a href="image381.jpg">Little Red Hot</a> (1999)
+<li><a href="image382.jpg">Loaded Bible</a> (2006)
 <li><a href="../Low/Low.html">Low</a> (2014)
-<li>Lucha Libre
-<li>Lullaby: Wisdom Seeker
-<li>M. Rex
-<li>Madman Atomic Comics (2007)
-<li>Maestros (2017)
-<li>Mage
-<li>Man-Eaters by Chelsea Cain and Kate Niemczyk
+<li><a href="image383.jpg">Lucha Libre</a> (2007)
+<li><a href="image384.jpg">Lullaby: Wisdom Seeker</a> (2005)
+<li><a href="image385.jpg">M. Rex</a> (1999)
+<li><a href="image386.jpg">Madman Atomic Comics</a> (2007)
+<li><a href="image387.jpg">Maestros</a> (2017)
+<li><a href="image388.jpg">Mage</a> (1997)
+<li><a href="image389.jpg">Man-Eaters</a> (2018)
 <li><a href="../ManhattanProjects/ManhattanProjects.html">Manhattan Projects</a> (2012)
-<li>Manifest Destiny (2013)
-<li>Mask of Zorro
-<li>Masters of the Universe
-<li>Maximage
+<li><a href="image390.jpg">Manifest Destiny</a> (2013)
+<li><a href="image391.jpg">Mask of Zorro</a> (1998)
+<li><a href="image392.jpg">Masters of the Universe</a> (2002)
+<li><a href="image393.jpg">Maximage</a> (1995)
 <li><a href="../Maxx/Maxx.html">Maxx</a> (1993)
-<li>Mayhem!
-<li>Mech Destroyer
-<li>Megaton Man
-<li>Meltdown
-<li>Mice Templar
-<li>Micronauts
-<li>Middlewest (2018)
-<li>Misplaced
+<li><a href="image394.jpg">Mayhem!</a> (2009)
+<li><a href="image395.jpg">Mech Destroyer</a> (2001)
+<li><a href="image396.jpg">Meltdown</a> (2006)
+<li><a href="image397.jpg">Mice Templar</a> (2007)
+<li><a href="image398.jpg">Micronauts</a> (2002)
+<li><a href="image399.jpg">Middlewest</a> (2018)
+<li><a href="image401.jpg">Minimum Wage</a> (2014)
+<li><a href="image400.jpg">Misplaced</a> (2003)
 <li><a href="../Monstress/Monstress.html">Monstress</a> (2015)
-<li>Moonstruck by Grace Ellis and Shae Beagle (2017)
-<li>Mora (2005)
-<li>More Than Mortal: Otherworlds
+<li><a href="image402.jpg">Moonstruck</a> (2017)
+<li><a href="image403.jpg">More Than Mortal</a> (1999) 
 <li><a href="../MorningGlories/MorningGlories.html">Morning Glories</a> (2010)
 <li><a href="../MotorCrush/MotorCrush.html">Motor Crush</a> (2016)
 <li><a href="../MurderFalcon/MurderFalcon.html">Murder Falcon</a> (2018)
-<li>Mutant Earth
-<li>Mythstalkers
-<li>Nailbiter
-<li>Nash (1999)
-<li>Near Death (2011)
-<li>New Brighton Archeological Society (2009)
-<li>New Men
-<li>Next Issue Project
-<li>Night Club
-<li>Night World (2014)
-<li>No Place Like Home
-<li>Noble Causes (2002)
-<li>Nonplayer
+<li><a href="image404.jpg">Mutant Earth</a> (2002)
+<li><a href="image405.jpg">Mythstalkers</a> (2003)
+<li><a href="image406.jpg">Nash</a> (1999)
+<li><a href="image407.jpg">Near Death</a> (2011)
+<li><a href="image408.jpg">Next Gen Warz</a> (2010)
+<li><a href="image409.jpg">Night Club</a> (2005)
+<li><a href="image410.jpg">Night World</a> (2014)
+<li><a href="image411.jpg">No Place Like Home</a> (2012)
+<li><a href="image412.jpg">Nine Rings of Wu-Tang</a> (1999)
+<li><a href="image413.jpg">Nine Volt</a> (1997)
+<li><a href="image414.jpg">Noble Causes</a> (2002)
+<li><a href="image415.jpg">Nonplayer</a> (2011)
 <li><a href="../NowhereMen/NowhereMen.html">Nowhere Men</a> (2012)
-<li>NYC Mech
-<li>NYC Mech: Beta Love (2005)
-<li>Obergeist
-<li>Occult Crimes Taskforce
-<li>Oliver (2019)
-<li>Olympus
+<li><a href="image416.jpg">NYC Mech</a> (2004)
+<li><a href="image417.jpg">Obergeist</a> (2001)
+<li><a href="image418.jpg">Occult Crimes Taskforce</a> (2006)
+<li><a href="image419.jpg">Oliver</a> (2019)
+<li><a href="image420.jpg">Olympus</a> (2009)
 <li><a href="../OrcStain/OrcStain.html">Orc Stain</a> (2010)
-<li>Others
-<li>Outcast
-<li>Outlaw Territory
+<li><a href="image421.jpg">Others</a> (1995)
+<li><a href="image422.jpg">Outcast</a> (2014)
 <li><a href="../PaperGirls/PaperGirls.html">Paper Girls</a> (2015)
-<li>Paradigm (2002)
-<li>Pax Romana (2007)
-<li>Peter Panzerfaust (2013)
-<li>Phantom Guard
-<li>Phantom Jack
-<li>Phonogram (2006)
-<li>PigTale
-<li>Pirates of Coney Island
-<li>PITT
-<li>Planetoid
+<li><a href="image423.jpg">Paradigm</a> (2002)
+<li><a href="image424.jpg">Pax Romana</a> (2007)
+<li><a href="image425.jpg">Peter Panzerfaust</a> (2013)
+<li><a href="image426.jpg">Phantom Guard</a> (1997)
+<li><a href="image427.jpg">Phantom Jack</a> (2004)
+<li><a href="image428.jpg">Phonogram</a> (2006)
+<li><a href="image429.jpg">PigTale</a> (2005)
+<li><a href="image430.jpg">Pirates of Coney Island</a> (2006)
+<li><a href="image431.jpg">PITT</a> (1993)
+<li><a href="image432.jpg">Planetoid</a> (2012)
 <li><a href="../Plutona/Plutona.html">Plutona</a> (2015)
-<li>Point of Impact
-<li>Popgun (2012)
-<li>Portent
-<li>Power Rangers: Zeo
-<li>Powers (2000)
+<li><a href="image433.jpg">Point of Impact</a> (2012)
+<li><a href="image434.jpg">Popgun</a> (2012)
+<li><a href="image435.jpg">Portent</a> (2006)
+<li><a href="image436.jpg">Powers</a> (2000)
 <li>Pretty Deadly (2013)
 <li>Prism Stalker (2018)
 <li>Private Eye (2013)
