--- a/AmericanGothicPress/AmericanGothicPress.html
+++ b/AmericanGothicPress/AmericanGothicPress.html
@@ -30,6 +30,9 @@
 <div class="mySlides" style="text-align: center;"><img src="AGP10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AGP11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AGP12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AGP13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AGP14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AGP15.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -42,23 +45,21 @@ AGP officially launched in June 2015 with Gunsuits, a four-issue science fiction
 </p><p>
 Titles
 </p><p>
-<li>Bornhome (2015)
-<li>Broken Moon (2015)
-<li>Broken Moon: Legends of the Deep (2016)
-<li>Famous Monsters Presents: Spook-a-rama (2015)
-<li>Gunsuits: Alix (2016)
-<li>Invisible Hands (2017)
-<li>Irwin Allen's Lost in Space: The Lost Adventures (2016)
-<li>Island 731 (2016)
-<li>Killbox (2016)
-<li>Killbox (2016)
-<li>Killbox Chicago (2017)
-<li>Monster World (2015)
-<li>Monster World: The Golden Age (2019)
-<li>Nice (2018)
-<li>Nice (2019)
-<li>Project Nemesis (2015)
-<li>Thin (2016)
+<li><a href="AGP1.jpg">Bornhome</a> (2015)
+<li><a href="AGP2.jpg">Broken Moon</a> (2015)
+<li><a href="AGP3.jpg">Broken Moon: Legends of the Deep</a> (2016)
+<li><a href="AGP4.jpg">Famous Monsters Presents: Spook-a-rama</a> (2015)
+<li><a href="AGP5.jpg">Gunsuits: Alix</a> (2016)
+<li><a href="AGP9.jpg">Invisible Hands</a> (2017)
+<li><a href="AGP6.jpg">Irwin Allen's Lost in Space: The Lost Adventures</a> (2016)
+<li><a href="AGP7.jpg">Island 731</a> (2016)
+<li><a href="AGP8.jpg">Killbox</a> (2016)
+<li><a href="AGP13.jpg">Killbox Chicago</a> (2017)
+<li><a href="AGP10.jpg">Monster World</a> (2015)
+<li><a href="AGP14.jpg">Monster World: The Golden Age</a> (2019)
+<li><a href="AGP15.jpg">Nice</a> (2018)
+<li><a href="AGP11.jpg">Project Nemesis</a> (2015)
+<li><a href="AGP12.jpg">Thin</a> (2016)
 </p>
 
 </body>
