--- a/AmericasBest/AmericasBest.html
+++ b/AmericasBest/AmericasBest.html
@@ -18,7 +18,15 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBest1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBest2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBest3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBest4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../LeagueOfExtraordinaryGentlemen/LeagueOfExtraordinaryGentlemen1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBest5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Promethea/Promethea1a.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBest6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBest7.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -31,6 +39,19 @@ America's Best Comics (ABC) is a comic book publishing brand. It was set up by A
 Using this, Moore wrote the series <a href="../LeagueOfExtraordinaryGentlemen/LeagueOfExtraordinaryGentlemen.html">The League of Extraordinary Gentlemen</a>, a strip which merged several famous Victorian era fiction characters into one world.
 </p><p>
 Also, Tom Strong, an homage to pulp fiction heroes such as Tarzan and Doc Savage. Top 10, a police procedural set in a police precinct in a city where everyone has superpowers, and <a href="../Promethea/Promethea.html">Promethea</a>, one of Moore's most personal pieces which detailed his view on magic.
+</p><p>
+Titles
+</p><p>
+<li><a href="AmericasBest1.jpg">ABC: A-Z, Greyshirt and Cobweb</a> (2006)
+<li><a href="AmericasBest2.jpg">Absolute Promethea</a> (2009)
+<li><a href="AmericasBest3.jpg">America's Best Comics</a> (2003)
+<li><a href="AmericasBest4.jpg">Greyshirt: Indigo Sunset</a> (2001)
+<li><a href="../LeagueOfExtraordinaryGentlemen/LeagueOfExtraordinaryGentlemen.html">League of Extraordinary Gentlemen</a> (1999)
+<li><a href="AmericasBest5.jpg">Many Worlds of Tesla Strong</a> (2003)
+<li><a href="../Promethea/Promethea.html">Promethea</a> (2001)
+<li><a href="AmericasBest6.jpg">Smax</a> (2003)
+<li><a href="AmericasBest7.jpg">Terra Obscura</a> (2003)
+
 </p>
 
 </body>
